<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/result"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ui.result.ResultFragment">

    <TextView
        android:id="@+id/result_text_view_operation"
        style="@style/OperationTextView"
        app:autoSizeTextType="uniform"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeMaxTextSize="24sp"
        app:autoSizeStepGranularity="2sp"
        android:ellipsize="end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="viewEnd"/>

    <TextView
        android:id="@+id/result_text_view_result"
        style="@style/ResultTextView"
        app:autoSizeTextType="uniform"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeMaxTextSize="48sp"
        app:autoSizeStepGranularity="2sp"
        android:ellipsize="end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="15"
        android:textAlignment="viewEnd"/>
</LinearLayout>